# EA

./: EA.py  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
pages/: 1_Théorie.py  2_Simulation de contrôle.py  3_Simulation de trajectoires sous contrôle.py  4_Simulation trajectoire de variances et contrôle.py
